# RAGKit

./: .gitignore  Flow.txt  Install.txt  README.md  demo_embedding.py  demo_embedding_ollama.py  demo_pipeline.py  demo_vector_store.py  pyproject.toml
demo/: demo.py  demo_embedding.py  demo_vector_store.py
docs/: databricks.txt  delta.txt  spark_2.txt  sql.mark
examples/: 01_load_documents.py  02_chunk_documents.py  03_generate_embeddings.py  04_build_vector_index.py  05_similarity_search.py  06_retrieval_pipeline.py  07_document_indexer.py  08_transformers.py  09_reranker.py  10_chat.py  11_complete_rag.py  12_hybrid_retrieval.py  13_metadata_filtering.py  13_metadata_filtering_v01.py
examples/docs/: spark.txt
ragkit/: __init__.py  __main__.py  logger.py  ragkit.py
ragkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ragkit/chunkers/: character_chunker.py  chunker.py  recursive_chunker.py
ragkit/config/: __init__.py  chunker_config.py  embedding_config.py  llm_config.py  ragkit_config.py  reranker_config.py  retrieval_config.py  vector_store_config.py
ragkit/embeddings/: embedder.py  ollama_embedder.py  sentence_transformer_embedder.py
ragkit/examples/: README.md
ragkit/exceptions/: __init__.py  embedding_error.py  keyword_searcher_error.py  llm_error.py  loader_error.py  ragkit_error.py  service_error.py  vector_store_error.py
ragkit/indexers/: document_indexer.py  indexer.py
ragkit/keyword/: __init__.py  bm25_searcher.py  keyword_searcher.py
ragkit/llms/: llm.py  ollama_llm.py
tests/: test_ollama_embedder.py  test_ragkit.py
(+93 files in other folders)
