[project]
name = "ragkit"
version = "0.1.0"
description = "A modular Retrieval-Augmented Generation framework"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
