[build-system]
requires = [
    "setuptools>=69",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "ragkit"
version = "0.1.0"
description = "A modular Retrieval-Augmented Generation framework"
requires-python = ">=3.12"

dependencies = [
    "chromadb",
    "ollama",
    "rank-bm25",
]

[tool.setuptools]
packages = ["ragkit"]


[tool.ruff]
line-length = 100
target-version = "py312"


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]